--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-react-helmet": "^2.0.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "reason-react": "^0.3.1"
   },
   "keywords": [
     "gatsby"
@@ -18,9 +19,12 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bs:watch": "bsb -make-world -w",
+    "bs:clean": "bsb -clean-world"
   },
   "devDependencies": {
+    "bs-platform": "^2.1.0",
     "prettier": "^1.10.2"
   }
 }
